added jenkins browser variable to pick

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -2,7 +2,7 @@ browser = chrome
 url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 
-username = naveenanimation@reddiffmail.com
+username = naveenanimation20@gmail.com
 password = Selenium@12345
 
 highlight=
