Added AWS related remote execution code

--- a/src/test/resources/config/dev.config.properties
+++ b/src/test/resources/config/dev.config.properties
@@ -1,5 +1,7 @@
 browser = chrome
+browserversion =
 url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
+
 username = rashikaripur@reddiffmail.com
 password = test@123
 
@@ -8,4 +10,6 @@ headless = false
 incognito=false
 
 huburl = http://localhost:4444/wd/hub
+#huburl = http://18.224.107.123/wd/hub --> AWS remote hub url
 remote = true
+enableVNC = true
