--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,4 +1,5 @@
 browser = chrome
+browserversion =
 url=https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 username = rashikaripur@reddiffmail.com
@@ -9,4 +10,6 @@ headless = false
 incognito=false
 
 huburl = http://localhost:4444/wd/hub
+#huburl = http://18.224.107.123/wd/hub --> AWS remote hub url
 remote = false
+enableVNC = true
